# paymind

./: .gitignore  README.md  constants.py  main.py  manage.py  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_rename_tenant_organization_and_more.py  0003_alter_membership_role.py  0004_alter_membership_unique_together_and_more.py  0005_role_customuser_role.py
common/: models.py
paymind/: asgi.py  settings.py  urls.py  wsgi.py
sandbox/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
sandbox/management/commands/: seed_products.py
sandbox/migrations/: 0001_initial.py  0002_remove_product_slug.py  0003_customer.py
webpages/: admin.py  decorators.py  models.py  urls.py  views.py
webpages/management/commands/: seed_user_menus.py
webpages/migrations/: 0001_initial.py
webpages/static/js/: utils.js
webpages/static/js/auth/: login.js  logout.js  register.js
webpages/static/js/console/sandbox/: customer.js  (+1 more)
webpages/templates/: dashboard.html  home.html
webpages/templates/auth/: base.html  forgot_password.html  login.html  register.html
webpages/templates/console/: base.html  dashboard.html
webpages/templates/console/samples/: admin.html  owner.html
webpages/templates/console/sandbox/: admin.html  customer.html  member.html  owner.html  product.html  user.html
webpages/templates/console/settings/: profile.html  security.html
webpages/templatetags/: menu_tags.py
workforce/: admin.py  apps.py  models.py
workforce/migrations/: 0001_initial.py
